--- a/charts/dp-config-aws/charts/crossplane-components/charts/claims/values.yaml
+++ b/charts/dp-config-aws/charts/crossplane-components/charts/claims/values.yaml
@@ -1,4 +1,4 @@
-# Copyright © 2024. Cloud Software Group, Inc.
+# Copyright © 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
@@ -131,6 +131,7 @@ auroraCluster:
     # databaseName: "postgres"
     dbInstanceClass: "db.t3.medium"
     dbParameterGroupFamily: "aurora-postgresql14"
+    enablePerformanceInsights: false
     engine: "aurora-postgresql"
     engineVersion: "14.11"
     engineMode: "provisioned"
@@ -154,6 +155,7 @@ auroraCluster:
   #   allowedIngressConnectionsFrom:
   #     - "10.120.0.0/32"
   #     - "40.120.0.0/32"
+  #   performanceInsightsKmsKeyId: ""
   #   skipFinalSnapshot: "true"
   #   storageEncrypted: "false"
   #   storageType: aurora
