--- a/charts/dp-config-aws/charts/crossplane-components/charts/compositions/templates/aurora-postgres-cluster-composition.yaml
+++ b/charts/dp-config-aws/charts/crossplane-components/charts/compositions/templates/aurora-postgres-cluster-composition.yaml
@@ -1,5 +1,5 @@
 {{/*
-Copyright © 2024. Cloud Software Group, Inc.
+Copyright © 2025. Cloud Software Group, Inc.
 This file is subject to the license terms contained
 in the license file that is distributed with this file.
 */}}
@@ -167,6 +167,8 @@ spec:
           toFieldPath: "spec.forProvider.deletionProtection"
         - fromFieldPath: "spec.parameters.enableGlobalWriteForwarding"
           toFieldPath: "spec.forProvider.enableGlobalWriteForwarding"
+        - fromFieldPath: "spec.parameters.enablePerformanceInsights"
+          toFieldPath: "spec.forProvider.enablePerformanceInsights"
         - fromFieldPath: "spec.parameters.engine"
           toFieldPath: "spec.forProvider.engine"
         - fromFieldPath: "spec.parameters.engineMode"
@@ -184,6 +186,8 @@ spec:
           toFieldPath: "spec.forProvider.masterUsername"
         - fromFieldPath: "spec.parameters.masterUserPasswordSecretRef"
           toFieldPath: "spec.forProvider.masterUserPasswordSecretRef"
+        - fromFieldPath: "spec.parameters.performanceInsightsKmsKeyId"
+          toFieldPath: "spec.forProvider.performanceInsightsKMSKeyID"
         - fromFieldPath: "spec.parameters.port"
           toFieldPath: "spec.forProvider.port"
         - fromFieldPath: "spec.parameters.skipFinalSnapshot"
