--- a/charts/dp-core-infrastructure/charts/tp-tibtunnel/values.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-tibtunnel/values.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -12,7 +12,7 @@ global:
     dataPlaneId: "abcd"
     subscriptionId: "sub1"
     containerRegistry:
-      url: reldocker.tibco.com
+      url: ""
       repository: "tibco-platform-docker-prod"
 
   logging:
@@ -54,7 +54,7 @@ replicaCount: "1"
 image:
   name: infra-tibtunnel
   pullPolicy: IfNotPresent
-  tag: 187
+  tag: 194
 
 nodeSelector:
   kubernetes.io/os: linux
