--- a/charts/dp-core-infrastructure/values.yaml
+++ b/charts/dp-core-infrastructure/values.yaml
@@ -16,7 +16,7 @@ global:
     cpHostName: "https://account.local.cic2.pro"  # Control Plane DNS domain
     serviceAccount: ""                                 # customer provided service account
     containerRegistry:
-      url: "reldocker.tibco.com"
+      url: ""
       repository: "tibco-platform-docker-prod"
 
     enableResourceConstraints: true
