--- a/charts/o11y-service/templates/deployment.yaml
+++ b/charts/o11y-service/templates/deployment.yaml
@@ -24,7 +24,9 @@ spec:
       labels:
         {{- include "o11y-service.shared.labels.standard" . | nindent 8 }}
         networking.platform.tibco.com/kubernetes-api: enable
-        egress.networking.platform.tibco.com/internet-all: enable
+        networking.platform.tibco.com/prometheus: enable
+        networking.platform.tibco.com/logServer-egress: enable
+        networking.platform.tibco.com/internet-egress: enable
     spec:
       terminationGracePeriodSeconds: 30
       imagePullSecrets:
