--- a/charts/o11y-service/values.yaml
+++ b/charts/o11y-service/values.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -14,7 +14,7 @@ global:
     namespace: tp-dp-dp1
     containerRegistry:
       secret: ""
-      url: reldocker.tibco.com
+      url: ""
       repository: "tibco-platform-docker-prod"
     enableClusterScopedPerm: true
     enableResourceConstraints: true
@@ -416,7 +416,7 @@ global:
       namespace: dp-integration-default
     image:
       registry: 664529841144.dkr.ecr.us-west-2.amazonaws.com
-      tag: 2355
+      tag: 2496
 
 
 replicaCount: 1
