--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -15,7 +15,7 @@ global:
     namespace: ns-dummy
     containerRegistry:
       secret: ""
-      url: reldocker.tibco.com
+      url: ""
       repository: "tibco-platform-docker-prod"
     environmentType: ""
     enableResourceConstraints: true
