--- a/charts/tp-cp-proxy/values.yaml
+++ b/charts/tp-cp-proxy/values.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -30,7 +30,7 @@ replicaCount: "1"
 
 image:
   name: infra-cp-proxy
-  tag: 180
+  tag: 183
   pullPolicy: IfNotPresent
 
 nodeSelector:
@@ -46,7 +46,7 @@ global:
     dataplaneId: "abcd"
     subscriptionId: "sub1"
     containerRegistry:
-      url: "reldocker.tibco.com"
+      url: ""
       secret: "abcd"
       repository: "tibco-platform-docker-prod"
     resources:
