--- a/charts/dp-config-aws/values.yaml
+++ b/charts/dp-config-aws/values.yaml
@@ -1,4 +1,4 @@
-# Copyright © 2024. Cloud Software Group, Inc.
+# Copyright © 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
@@ -313,6 +313,7 @@ crossplane-components:
         # databaseName: "postgres"
         dbInstanceClass: "db.t3.medium"
         dbParameterGroupFamily: "aurora-postgresql14"
+        enablePerformanceInsights: false
         engine: "aurora-postgresql"
         engineVersion: "14.11"
         engineMode: "provisioned"
@@ -336,6 +337,7 @@ crossplane-components:
       #   allowedIngressConnectionsFrom:
       #     - "10.120.0.0/32"
       #     - "40.120.0.0/32"
+      #   performanceInsightsKmsKeyId: ""
       #   skipFinalSnapshot: "true"
       #   storageEncrypted: "false"
       #   storageType: aurora
