--- a/charts/dp-configure-namespace/values.yaml
+++ b/charts/dp-configure-namespace/values.yaml
@@ -1,4 +1,4 @@
-# Copyright © 2024. Cloud Software Group, Inc.
+# Copyright © 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
@@ -15,7 +15,7 @@ global:
     enableClusterScopedPerm: true
 
     containerRegistry:
-      url: "reldocker.tibco.com"
+      url: ""
       repository: "tibco-platform-docker-prod"
       # [optional] Create a imagePullSecret named <dpId> for private container registry.
       username: "test"
@@ -33,19 +33,127 @@ rbac:
   bwce: true
   flogo: true
   ems: true
-  serviceMesh: true
   pulsar: true
   devHub: true
   # Conditional RBACS for ingress controller
   ingressController:
     kong: true
     traefik: true
+    openshiftRouter: true
 
 networkPolicy:
   # Flag to enable or disable creating default network policies for a namespace
   # Default value is false. Possible values are true, false
   create: false
   # Required value if the network policies are to be enabled
+  # Create deprecated network policies
+  createDeprecatedPolicies: true
+  # Flag to enable or disable creating cluster scoped network policies
+  createClusterScopePolicies: false
+  # Flag to enable or disable creating internet scoped network policies
+  createInternetScopePolicies: false
+  # Network policies for access to the database, if no values are provided, the database policy will not be created
+  database:
+    CIDR: ""
+    port: ""
+  # Network policies for access to the log server, if no values are provided, the log server policy will not be created
+  logServer:
+    CIDR: ""
+    port: ""
+  # Network policies for access to Prometheus, if no values are provided, the Prometheus policy will not be created
+  prometheus:
+    CIDR: ""
+    port: ""
+  # Network policies for access to the container registry, if no values are provided, the container registry policy will not be created
+  containerRegistry:
+    CIDR: ""
+    port: ""
+  # Network policies for access to the Helm registry, if no values are provided, the Helm registry policy will not be created
+  helmRegistry:
+    CIDR: ""
+    port: ""
+  # Network policies for access to the proxy, if no values are provided, the proxy policy will not be created
+  proxy:
+    CIDR: ""
+    port: ""
+  # Network policies for access to the Kubernetes API server, if no values are provided, the Kubernetes API server policy will not be created
+  kubeApiServer:
+    CIDR: ""
+    port: ""
+  # Network policies for access to the control plane, if no values are provided, the control plane policy will not be created
+  # This configuration accepts an array of values, which is particularly useful when the Service and Tunnel domains are hosted on different load balancers.
+  controlPlane:
+    # egress:
+    # - to:
+    #   - ipBlock:
+    #       cidr: ""
+    #   ports:
+    #   - port: ""
+    #     protocol: TCP
+  # BW fetching data from the TEA domain and other use cases for TEA domain
+  tea:
+    # ingress:
+    # - from:
+    #   - ipBlock:
+    #       cidr: ""
+    #   ports:
+    #   - port: ""
+    #     protocol: TCP
+    # egress:
+    # - to:
+    #   - ipBlock:
+    #       cidr: ""
+    #   ports:
+    #   - port: ""
+    #     protocol: TCP
+  # Clients accessing EMS servers and otehr use cases of EMS
+  msgInfra:
+    # ingress:
+    # - from:
+    #   - ipBlock:
+    #       cidr: ""
+    #   ports:
+    #   - port: ""
+    #     protocol: TCP
+    # egress:
+    # - to:
+    #   - ipBlock:
+    #       cidr: ""
+    #   ports:
+    #   - port: ""
+    #     protocol: TCP
+  # Hawk use case in Customer Infrastructure (EMS and RV) for fetching capability (BW5/BE) data
+  hawkInfra:
+    # ingress:
+    # - from:
+    #   - ipBlock:
+    #       cidr: ""
+    #   ports:
+    #   - port: ""
+    #     protocol: TCP
+    # egress:
+    # - to:
+    #   - ipBlock:
+    #       cidr: ""
+    #   ports:
+    #   - port: ""
+    #     protocol: TCP
+  # UserApps network policy
+  userApps:
+    # ingress:
+    # - from:
+    #   - ipBlock:
+    #       cidr: ""
+    #   ports:
+    #   - port: ""
+    #     protocol: TCP
+    # egress:
+    # - to:
+    #   - ipBlock:
+    #       cidr: ""
+    #   ports:
+    #   - port: ""
+    #     protocol: TCP
   # node CIDR IP block
   nodeCidrIpBlock: ""
   # pod CIDR IP block
