--- a/charts/jaeger/values.yaml
+++ b/charts/jaeger/values.yaml
@@ -15,7 +15,7 @@ global:
     namespace: ns-dummy
     containerRegistry:
       secret: ""
-      url: reldocker.tibco.com
+      url: ""
       repository: "tibco-platform-docker-prod"
     environmentType: ""
     enableResourceConstraints: true
