--- a/charts/tp-cp-infra-recipes/templates/integrationcore.yaml
+++ b/charts/tp-cp-infra-recipes/templates/integrationcore.yaml
@@ -15,7 +15,7 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.6.0",
+      "capabilityVersion": "1.7.0",
       "minCPVersion": "1.1.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.integrationcore.releaseDate | quote }},
@@ -82,7 +82,7 @@ data:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "tp-cp-infra-recipes.appName" . }}-integrationcore
+  name: {{ include "tp-cp-infra-recipes.appName" . }}-integrationcore-{{ randAlphaNum 4 | lower }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "tp-cp-infra-recipes.labels" . | nindent 4 }}
@@ -122,7 +122,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/infra"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.6.0"
+          value: "1.7.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
