--- a/charts/tp-cp-infra-recipes/templates/o11y.yaml
+++ b/charts/tp-cp-infra-recipes/templates/o11y.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -15,7 +15,7 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.6.0",
+      "capabilityVersion": "1.7.0",
       "minCPVersion": "1.2.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.o11y.default.releaseDate | quote }},
@@ -111,7 +111,8 @@ data:
                 fullnameOverride: otel-userapp
                 podLabels:
                   networking.platform.tibco.com/kubernetes-api: enable
-                  egress.networking.platform.tibco.com/internet-all: enable
+                  networking.platform.tibco.com/logServer-egress: enable
+                  networking.platform.tibco.com/internet-egress: enable
                 serviceAccount:
                   create: false
                   name: ${SERVICE-ACCOUNT}
@@ -305,7 +306,8 @@ data:
                 fullnameOverride: otel-userapp-metrics
                 podLabels:
                   networking.platform.tibco.com/kubernetes-api: enable
-                  egress.networking.platform.tibco.com/internet-all: enable
+                  networking.platform.tibco.com/prometheus: enable
+                  networking.platform.tibco.com/internet-egress: enable
                   prometheus.io/scrape: "true"
                   prometheus.io/path: "metrics"
                   prometheus.io/port: "4319"
@@ -824,7 +826,8 @@ data:
                 fullnameOverride: otel-finops
                 podLabels:
                   networking.platform.tibco.com/kubernetes-api: enable
-                  egress.networking.platform.tibco.com/internet-all: enable
+                  networking.platform.tibco.com/prometheus: enable
+                  networking.platform.tibco.com/internet-egress: enable
                 serviceAccount:
                   create: false
                   name: ${SERVICE-ACCOUNT}
@@ -954,7 +957,8 @@ data:
                 fullnameOverride: otel-services
                 podLabels:
                   networking.platform.tibco.com/kubernetes-api: enable
-                  egress.networking.platform.tibco.com/internet-all: enable
+                  networking.platform.tibco.com/logServer-egress: enable
+                  networking.platform.tibco.com/internet-egress: enable
                 serviceAccount:
                   create: false
                   annotations: {}
@@ -1056,11 +1060,16 @@ data:
                   type: memory
                 agent:
                   enabled: false
+                allInOne:
+                  podLabels:
+                    networking.platform.tibco.com/prometheus: enable
+                    networking.platform.tibco.com/internet-egress: enable
                 query:
                   fullnameOverride: jaeger-query
                   podLabels:
                     networking.platform.tibco.com/kubernetes-api: enable
-                    egress.networking.platform.tibco.com/internet-all: enable
+                    networking.platform.tibco.com/logServer-egress: enable
+                    networking.platform.tibco.com/internet-egress: enable
                   serviceAccount:
                     create: false
                     name: ${SERVICE-ACCOUNT}
@@ -1072,7 +1081,8 @@ data:
                   fullnameOverride: jaeger-collector
                   podLabels:
                     networking.platform.tibco.com/kubernetes-api: enable
-                    egress.networking.platform.tibco.com/internet-all: enable
+                    networking.platform.tibco.com/logServer-egress: enable
+                    networking.platform.tibco.com/internet-egress: enable
                   serviceAccount:
                     create: false
                     name: ${SERVICE-ACCOUNT}
@@ -1095,7 +1105,7 @@ data:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "tp-cp-infra-recipes.appName" . }}-o11y
+  name: {{ include "tp-cp-infra-recipes.appName" . }}-o11y-{{ randAlphaNum 4 | lower }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "tp-cp-infra-recipes.labels" . | nindent 4 }}
@@ -1135,7 +1145,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/infra"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.6.0"
+          value: "1.7.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
