--- a/charts/tp-cp-o11y/charts/o11y-service/templates/tibcoRoute.yaml
+++ b/charts/tp-cp-o11y/charts/o11y-service/templates/tibcoRoute.yaml
@@ -30,6 +30,7 @@ spec:
           methods:
             - GET
             - POST
+            - PUT
           fqdn: ${TSC_DNS_DOMAIN},${TSC_ADMIN_DNS_DOMAIN}
           allowClientCache: false
           allowXFrameOptions: false
