--- a/charts/tp-cp-proxy/templates/deployment.yaml
+++ b/charts/tp-cp-proxy/templates/deployment.yaml
@@ -21,8 +21,10 @@ spec:
     metadata:
       labels:
         {{- include "tp-cp-proxy.shared.labels.standard" . | nindent 8 }}
-        egress.networking.platform.tibco.com/internet-web: enable
+        networking.platform.tibco.com/internet-web-egress: enable
         networking.platform.tibco.com/kubernetes-api: enable
+        # This label is used by the network policy to allow traffic to access control Plane, when createInternetScopePolicy is disabled
+        networking.platform.tibco.com/cp-egress: enable
     spec:
       {{ if .Values.podSecurityContext }}
       securityContext:
